tests/parser/define-class.5.bad.error
error: Malformed class definition
  --> test:4:14
   |
 4 |  (define-class (C :a :b =>))
   |                ^^^^^^^^^^^^ missing class name
